--- a/_config.yml
+++ b/_config.yml
@@ -215,6 +215,7 @@ font:
 # Value is the target link (E.g. GitHub: https://github.com/iissnan)
 social:
   GitHub: https://github.com/tangxuannnnn/strelitz.github.io
+  Weibo: https://www.weibo.com/u/3164387690/
 
 
 # Social Links Icons
